k8s/notejam-service-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: notejam
spec:
  type: LoadBalancer
  selector:
    app: notejam
  ports:
    - port: 3000
      targetPort: notejam-port
