k8s/postgres-service-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: notejam
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  type: NodePort
  ports:
    - port: 5432
      targetPort: postgres-port
